--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,7 @@ hr {
 #profile-img {
 	margin-right: 5px;
 	margin-left: 5px;
-	width: 40vmin;
+	width: 15rem;
 	box-shadow: 10px 0px 0px #333;
 	border: 2px solid #fff;
 	border-radius: 50%;
@@ -169,6 +169,5 @@ a:hover:before {
 	}
 	#profile-img {
 		margin: 20px;
-		width: 60vmin;
 	}
 }
