--- a/css/flipcard.css
+++ b/css/flipcard.css
@@ -2,7 +2,7 @@
 
 .project-div {
 	background-color: transparent;
-	height: 225px;
+	height: 224px;
 	perspective: 1000px; /* 3D effect */
 }
 .project-div-inner {
@@ -15,7 +15,8 @@
 .project-div:hover .project-div-inner {
 	transform: rotateY(180deg);
 }
-.project-div-front, .project-div-back {
+.project-div-front,
+.project-div-back {
 	position: absolute;
 	width: 100%;
 	height: 100%;
@@ -29,7 +30,8 @@
 .project-desc-link {
 	color: #fff;
 }
-.project-desc-link:hover, .project-desc-link:focus {
+.project-desc-link:hover,
+.project-desc-link:focus {
 	color: #fff;
 }
 .project-desc-link:before {
@@ -37,5 +39,5 @@
 }
 .project-div-back .project-icon {
 	background-color: #fff;
-	border-radius: 10px;
+	border-radius: 12px;
 }
