--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
 	border-radius: 0;
 }
 body {
-	margin: 40px;
+	margin: 2.5rem;
 }
 hr {
 	border-width: 2px;
@@ -21,13 +21,13 @@ hr {
 /* top */
 #top-container {
 	text-align: center;
-	margin: 40px;
+	margin: 2.5rem;
 }
 #profile-img {
-	margin-right: 5px;
-	margin-left: 5px;
-	width: 15rem;
-	box-shadow: 10px 0px 0px #333;
+	margin-right: 0.25rem;
+	margin-left: 0.25rem;
+	width: 12rem;
+	box-shadow: 0.5rem 0px 0px #333;
 	border: 2px solid #fff;
 	border-radius: 50%;
 	transition: 0.1s ease-in-out;
@@ -49,14 +49,13 @@ hr {
 }
 
 h1 {
-	letter-spacing: 2px;
+	letter-spacing: 0.25rem;
 }
 
 /* links */
 a {
 	font-weight: bold;
 	color: #666;
-	/*position: relative;*/
 	text-decoration: none;
 }
 a:not(.project-desc-link) {
@@ -115,18 +114,19 @@ a:hover:before {
 	top: 0;
 	left: 0;
 	z-index: 100;
-	background-color: rgba(255, 255, 255, 0.9);
+	background-color: #fffc;
 	overflow-x: hidden;
-	padding-top: 75px;
+	padding-top: 5rem;
 	transition: 0.25s ease-in-out;
-	border-right: 2px solid #333;
+	border-right: 4px solid #eee;
 }
 #sidebar a {
-	padding: 10px;
+	padding: 1rem;
 	text-decoration: none;
-	font-size: 20px;
+	font-size: 1.25rem;
 	display: block;
 	color: #333;
+	border: 4px solid transparent;
 }
 #sidebar a:hover,
 #sidebar a:focus {
@@ -137,6 +137,9 @@ a:hover:before {
 #sidebar a.active {
 	background-color: #666;
 	color: #fff;
+}
+#sidebar a:focus {
+	border-color: #999;
 }
 
 .tag-col p {
@@ -184,6 +187,7 @@ a:hover:before {
 	.tag-col p {
 		transform: rotate(0deg) !important;
 		display: inline;
+		padding-right: 0.25rem;
 	}
 	#profile-img {
 		margin-top: 20px;
