--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -9,8 +9,8 @@
 	padding: 16px;
 	display: inline-block;
 	cursor: pointer;
-	transition-property: opacity, filter;
-	transition-duration: 0.15s;
+	transition-property: opacity, filter background-color;
+	transition-duration: 0.2s;
 	transition-timing-function: linear;
 	font: inherit;
 	color: inherit;
@@ -21,15 +21,20 @@
 	overflow: visible;
 }
 .hamburger:hover {
-	opacity: 0.7;
+	background-color: #333;
 }
 .hamburger.is-active:hover {
-	opacity: 0.7;
+	background-color: #eee;
 }
 .hamburger.is-active .hamburger-inner,
 .hamburger.is-active .hamburger-inner::before,
 .hamburger.is-active .hamburger-inner::after {
-	background-color: #000;
+	background-color: #fff;
+}
+.hamburger.is-active:hover .hamburger-inner,
+.hamburger.is-active:hover .hamburger-inner::before,
+.hamburger.is-active:hover .hamburger-inner::after {
+	background-color: #333;
 }
 
 .hamburger-box {
@@ -49,13 +54,20 @@
 .hamburger-inner::after {
 	width: 40px;
 	height: 4px;
-	background-color: #000;
+	background-color: #333;
 	border-radius: 4px;
 	position: absolute;
 	transition-property: transform;
 	transition-duration: 0.15s;
 	transition-timing-function: ease;
 }
+
+.hamburger:hover .hamburger-inner,
+.hamburger:hover .hamburger-inner::before,
+.hamburger:hover .hamburger-inner::after {
+	background-color: #fff;
+}
+
 .hamburger-inner::before,
 .hamburger-inner::after {
 	content: '';
