--- a/css/project-styles.css
+++ b/css/project-styles.css
@@ -41,6 +41,12 @@
 
 #projects-div h1 {
 	font-weight: bold;
+	background-color: #333;
+	color: #fff;
+	padding: 0.5rem;
+	padding-left: 1rem;
+	margin-top: 2rem;
+	margin-bottom: 2rem;
 }
 
 /* modals */
