update projects css
update css for flipcard, modals

remove fade text in from projects

minor updates to project descriptions

add link btns and small nav for project categories

--- a/css/flipcard.css
+++ b/css/flipcard.css
@@ -2,7 +2,7 @@
 
 .project-div {
 	background-color: transparent;
-	height: 256px;
+	height: 16rem;
 	perspective: 1000px; /* 3D effect */
 }
 .project-div-inner {
