--- a/css/flipcard.css
+++ b/css/flipcard.css
@@ -21,6 +21,7 @@
 	width: 100%;
 	height: 100%;
 	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden; /* Safari */
 }
 .project-div-back {
 	background-color: #999;
