--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -9,16 +9,19 @@
 	padding: 16px;
 	display: inline-block;
 	cursor: pointer;
-	transition-property: opacity, filter background-color;
+	transition-property: filter background-color;
 	transition-duration: 0.2s;
 	transition-timing-function: linear;
 	font: inherit;
 	color: inherit;
 	text-transform: none;
-	background-color: transparent;
+	background-color: #fff;
 	border: 0;
 	margin: 0;
 	overflow: visible;
+}
+.hamburger.is-active {
+	background-color: #333;
 }
 .hamburger:hover {
 	background-color: #333;
@@ -80,15 +83,13 @@
 	bottom: -12px;
 }
 
-/*
-   * Squeeze
-   */
+/* Squeeze */
 .hamburger--squeeze .hamburger-inner {
 	transition-duration: 0.075s;
 	transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 .hamburger--squeeze .hamburger-inner::before {
-	transition: top 0.075s 0.12s ease, opacity 0.075s ease;
+	transition: top 0.075s 0.12s ease;
 }
 .hamburger--squeeze .hamburger-inner::after {
 	transition: bottom 0.075s 0.12s ease,
@@ -102,8 +103,7 @@
 }
 .hamburger--squeeze.is-active .hamburger-inner::before {
 	top: 0;
-	opacity: 0;
-	transition: top 0.075s ease, opacity 0.075s 0.12s ease;
+	transition: top 0.075s ease;
 }
 .hamburger--squeeze.is-active .hamburger-inner::after {
 	bottom: 0;
