--- a/css/project-styles.css
+++ b/css/project-styles.css
@@ -1,35 +1,31 @@
 .project-div {
-	padding: 8px;
-	/* border: 2px solid #eee; */
+	padding: 0.75rem;
 	cursor: pointer;
 	text-align: center;
-	border-radius: 4px;
+	border-radius: 0.25rem;
 }
 .project-div:hover {
-	background-color: #ccc;
+	background-color: #eee;
 }
 .project-div:hover .project-title a {
 	color: #333;
 	text-decoration: underline;
 }
 .project-icon {
-	margin-top: 12px;
-	width: 64px;
+	margin-top: 0.75rem;
+	width: 4rem;
 }
-.project-desc,
-.project-details,
-.project-features,
-.project-tech {
-	padding: 12px;
-	padding-top: 8px;
+.project-desc {
+	padding: 0.5rem;
 	text-align: left;
 }
 .project-screenshot {
 	width: 90%;
 	/*width: 40%;*/
 	/*width: 200px;*/
-	box-shadow: 5px 5px 0px #333;
-	margin-bottom: 10px;
+	border: 2px solid #eee;
+	box-shadow: 0.5rem 0.5rem 0px var(--lightblue);
+	margin-bottom: 1rem;
 }
 .project-div:hover .project-details {
 	display: inline;
@@ -53,9 +49,10 @@
 .modal-content {
 	border: none;
 	border-radius: 0;
+	padding: 1.5rem;
 }
 .modal-header {
-	border-bottom: 2px solid #ccc;
+	border-bottom: 2px solid #eee;
 }
 .close {
 	color: #333;
@@ -68,7 +65,7 @@
 	background-color: #333;
 }
 .close:focus {
-	box-shadow: 0 0 0 0.2rem rgba(51, 51, 51, 0.25);
+	box-shadow: 0 0 0 0.25rem #999;
 	outline: none;
 }
 .modal-content h3 {
@@ -93,22 +90,21 @@
 	text-align: center;
 	color: #666;
 
-	background-color: #fff;
+	background-color: #eee;
 	position: absolute;
 	bottom: 0.5rem;
 	border-bottom-width: 0.5rem;
 	left: 0;
 	right: 0;
-
-	opacity: 0.75;
-	transition: opacity 0.2s linear;
 }
 .view-project:before,
 .view-project-in-card:before {
 	background-color: #333;
 }
-.view-project-in-card:hover {
-	opacity: 1;
+
+.project-desc-link:hover,
+.project-desc-link:focus {
+	text-decoration: underline;
 }
 
 #profile-img {
