--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,25 @@
-/* basics */
+@import url('https://fonts.googleapis.com/css2?family=Righteous&family=Raleway&family=Merriweather&display=swap');
+
+/* Typography */
+
 * {
-	font-family: Roboto, Arial;
+	font-family: 'Raleway', Roboto, Arial;
 }
+
+h1,
+h2 {
+	text-transform: uppercase;
+	font-family: 'Righteous', Roboto, Arial;
+}
+h3,
+h4,
+h5,
+h6 {
+	font-family: 'Merriweather', Roboto, Arial;
+}
+
+/* Colors */
+
 :root {
 	--yellow: #fed600;
 	--lightblue: #91d8f7;
@@ -14,6 +32,23 @@
 ::selection {
 	background: var(--lightblue);
 }
+
+/* More Basics */
+
+body {
+	margin: 2.5rem;
+	margin-top: 5rem;
+}
+hr {
+	border-width: 2px;
+}
+
+p {
+	line-height: 1.5rem;
+}
+
+/* Buttons */
+
 .btn {
 	border-radius: 0;
 	padding: 0.5rem 1rem;
@@ -22,59 +57,34 @@
 	background-color: #333;
 }
 .btn-dark:hover {
-	/* box-shadow: 0.25rem 0.25rem #999; */
+	background-color: #333;
 	box-shadow: 0.25rem 0.25rem 0px var(--lightblue);
 }
-body {
-	margin: 2.5rem;
-}
-hr {
-	border-width: 2px;
-}
 
-.paragraphs {
-	line-height: 1.75rem;
-}
+/* Top */
 
-/* top */
 #top-container {
 	text-align: center;
-	margin: 3rem;
+	margin-bottom: 3rem;
 }
 #profile-img {
-	margin-right: 0.25rem;
-	margin-left: 0.25rem;
+	margin: 0.5rem;
 	width: 12rem;
-	box-shadow: 0.5rem 0px 0px #666;
 	border: 2px solid #fff;
 	border-radius: 50%;
-	transition: 0.2s linear;
-}
-#profile-img.animated {
-	animation: saturateImg 5s linear;
 }
 
-@keyframes saturateImg {
-	from {
-		filter: grayscale(1);
-	}
-	to {
-		filter: grayscale(0);
-	}
-}
-
-h1 {
+#name-heading {
 	font-size: 3rem;
 	letter-spacing: 0.25rem;
-}
-#name-heading {
 	transition: text-shadow 0.2s linear;
 }
 #name-heading:hover {
-	text-shadow: 0.25rem 0.25rem var(--lightblue);
+	text-shadow: 0.25rem 0 var(--lightblue);
 }
 
-/* links */
+/* Links */
+
 a {
 	font-weight: bold;
 	color: #666;
@@ -91,44 +101,43 @@ a:active {
 	outline: none;
 }
 
-/* underline effect */
+/* Underline Effect */
+
 a:not(.project-desc-link):before {
 	content: '';
 }
 a:before {
-	/*content: '';*/
 	position: absolute;
 	width: 100%;
 	height: 2px;
 	bottom: 0;
 	left: 0;
 	background-color: var(--lightblue);
-	/*visibility: hidden;*/
 	-webkit-transform: scaleX(0);
 	transform: scaleX(0);
 	-webkit-transition: -webkit-transform 0.33s ease-in-out 0s;
 	transition: transform 0.33s ease-in-out 0s;
 }
-a:hover:before {
-	/*visibility: visible;*/
+a:hover:before,
+a:focus:before {
 	-webkit-transform: scaleX(1);
 	transform: scaleX(1);
 }
 
-.project-desc-link:hover {
-	text-decoration: underline;
-}
+/* Sidebar */
 
-/* side menu */
 #menu-btn {
 	position: fixed;
 	z-index: 1000;
 	left: 0;
 	top: 0;
+	border: 4px solid transparent;
 }
 #menu-btn:focus {
-	box-shadow: 0 0 0 0.2rem rgba(51, 51, 51, 0.25);
+	border: 4px solid #999;
+	box-shadow: none;
 }
+
 #sidebar {
 	height: 100%;
 	width: 0;
@@ -140,8 +149,6 @@ a:hover:before {
 	overflow-x: hidden;
 	padding-top: 6rem;
 	transition: 0.2s ease-in-out;
-	border-right: 4px solid #333;
-	/* box-shadow: 4px 0px 8px #999; */
 	text-align: left;
 }
 #sidebar a {
@@ -169,9 +176,12 @@ a:hover:before {
 
 .tag-col a {
 	color: #999;
+	font-weight: lighter;
+	font-style: italic;
 }
 
-/* tooltips */
+/* Tooltips */
+
 .tooltip-inner {
 	background: #333;
 	color: #fff;
@@ -182,7 +192,7 @@ a:hover:before {
 	border-bottom-color: #333;
 }
 
-/* animated profile */
+/* Animated Profile */
 
 #profile-img path {
 	stroke-dasharray: 1000;
@@ -205,6 +215,9 @@ a:hover:before {
 
 @media screen and (max-width: 768px) {
 	/* md */
+	body {
+		margin-top: 2.5rem;
+	}
 	.tag-col br {
 		display: none !important;
 	}
@@ -214,8 +227,8 @@ a:hover:before {
 		padding-right: 0.25rem;
 	}
 	#profile-img {
-		margin-top: 20px;
-		margin-bottom: 20px;
+		margin-top: 1.25rem;
+		margin-bottom: 1.25rem;
 	}
 }
 @media screen and (max-width: 576px) {
