--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -92,8 +92,7 @@
 	transition: top 0.075s 0.12s ease;
 }
 .hamburger--squeeze .hamburger-inner::after {
-	transition: bottom 0.075s 0.12s ease,
-		transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+	transition: bottom 0.075s 0.12s ease, transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
 }
 
 .hamburger--squeeze.is-active .hamburger-inner {
@@ -108,6 +107,5 @@
 .hamburger--squeeze.is-active .hamburger-inner::after {
 	bottom: 0;
 	transform: rotate(-90deg);
-	transition: bottom 0.075s ease,
-		transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
+	transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
 }
