--- a/css/styles.css
+++ b/css/styles.css
@@ -199,13 +199,13 @@ hr {
 	font-weight: 400;
 	user-select: none;
 	cursor: pointer;
-
-	border-radius: 0;
+	border: 2px solid #333;
 	padding: 0.75rem 1.25rem;
 }
 .btn-dark {
 	color: #fff;
 	background-color: #333;
+	border-color: #333;
 }
 .btn-dark:hover {
 	background-color: #333;
@@ -233,17 +233,17 @@ hr {
 
 /* Links */
 
-a {
+.a {
 	font-weight: bold;
 	color: #666;
 	text-decoration: none;
 }
-a:not(.project-desc-link):not(.view-project-in-card) {
+.a:not(.project-desc-link):not(.view-project-in-card) {
 	position: relative;
 }
-a:hover,
-a:focus,
-a:active {
+.a:hover,
+.a:focus,
+.a:active {
 	color: #666;
 	text-decoration: none;
 	outline: none;
@@ -251,10 +251,10 @@ a:active {
 
 /* Underline Effect */
 
-a:not(.project-desc-link):before {
+.a:not(.project-desc-link):before {
 	content: '';
 }
-a:before {
+.a:before {
 	position: absolute;
 	width: 100%;
 	height: 2px;
@@ -266,8 +266,8 @@ a:before {
 	-webkit-transition: -webkit-transform 0.33s ease-in-out 0s;
 	transition: transform 0.33s ease-in-out 0s;
 }
-a:hover:before,
-a:focus:before {
+.a:hover:before,
+.a:focus:before {
 	-webkit-transform: scaleX(1);
 	transform: scaleX(1);
 }
