Hamburger css cleanup

--- a/css/hamburger.css
+++ b/css/hamburger.css
@@ -6,23 +6,12 @@
  * @link https://github.com/jonsuh/hamburgers
  */
 .hamburger {
-	padding: 16px;
-	display: inline-block;
-	cursor: pointer;
-	transition-property: filter background-color;
-	transition-duration: 0.2s;
+	transition-duration: 0.25s;
 	transition-timing-function: linear;
-	font: inherit;
-	color: inherit;
-	text-transform: none;
 	background-color: #fff;
-	border: 0;
-	margin: 0;
-	overflow: visible;
 }
-.hamburger.is-active {
-	background-color: #333;
-}
+
+.hamburger.is-active,
 .hamburger:hover {
 	background-color: #333;
 }
@@ -62,7 +51,7 @@
 	position: absolute;
 	transition-property: transform;
 	transition-duration: 0.15s;
-	transition-timing-function: ease;
+	transition-timing-function: linear;
 }
 
 .hamburger:hover .hamburger-inner,
@@ -86,26 +75,26 @@
 /* Squeeze */
 .hamburger--squeeze .hamburger-inner {
 	transition-duration: 0.075s;
-	transition-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+	transition-timing-function: linear;
 }
 .hamburger--squeeze .hamburger-inner::before {
-	transition: top 0.075s 0.12s ease;
+	transition: top 0.075s 0.12s linear;
 }
 .hamburger--squeeze .hamburger-inner::after {
-	transition: bottom 0.075s 0.12s ease, transform 0.075s cubic-bezier(0.55, 0.055, 0.675, 0.19);
+	transition: bottom 0.075s 0.12s linear, transform 0.075s linear;
 }
 
 .hamburger--squeeze.is-active .hamburger-inner {
 	transform: rotate(45deg);
 	transition-delay: 0.12s;
-	transition-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+	transition-timing-function: linear;
 }
 .hamburger--squeeze.is-active .hamburger-inner::before {
 	top: 0;
-	transition: top 0.075s ease;
+	transition: top 0.075s linear;
 }
 .hamburger--squeeze.is-active .hamburger-inner::after {
 	bottom: 0;
 	transform: rotate(-90deg);
-	transition: bottom 0.075s ease, transform 0.075s 0.12s cubic-bezier(0.215, 0.61, 0.355, 1);
+	transition: bottom 0.075s linear, transform 0.075s 0.12s linear;
 }
